--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -44,6 +44,12 @@ div.row.text-center {
     padding-bottom: 2rem;
 }
 
+@media screen and (max-width: 576px) {
+    #justifyStart {
+        justify-content: start!important;
+    }
+}
+
 #formContainer {
     margin: 30px auto;
     width: 30%;
